force-app/main/default/objects/vlocity_ins__Formulary__c/fields/vlocity_ins__ApprovedDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ApprovedDate__c</fullName>
    <description>The date the Formulary was approved.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date the Formulary was approved.</inlineHelpText>
    <label>Approved Date</label>
    <type>Date</type>
</CustomField>