force-app/main/default/objects/vlocity_ins__Formulary__c/fields/vlocity_ins__EffectiveEndDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__EffectiveEndDate__c</fullName>
    <description>The date the Formulary is no longer open for selection.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date the Formulary is no longer open for selection.</inlineHelpText>
    <label>Effective End Date</label>
    <type>Date</type>
</CustomField>