force-app/main/default/objects/vlocity_ins__Formulary__c/fields/vlocity_ins__EffectiveStartDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__EffectiveStartDate__c</fullName>
    <description>The date the Formulary is effective for selection.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date the Formulary is effective for selection.</inlineHelpText>
    <label>Effective Start Date</label>
    <type>Date</type>
</CustomField>